Fixed issue were milling guide text was not visible due to overlapping with the commander card

--- a/client/match/hud/_guiDescription.scss
+++ b/client/match/hud/_guiDescription.scss
@@ -28,7 +28,8 @@
 
 .opponentDrawPileDescription {
   position: absolute;
-  left: 100%;
+  right: 100%;
+  text-align: right;
   justify-content: flex-end;
   width: 120px;
 }
